added validation for authContextRefs and grantTypes in OIDC create and update dto. Test cases updated